# tmux_for_win

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  diag.py  test_vt.c
.claude/: settings.local.json
include/: compat.h  platform.h  tmux.h
src/: cfg.c  client.c  cmd.c  colour.c  copy_mode.c  grid.c  input.c  key.c  layout.c  log.c  main.c  options.c  pane.c  screen.c  server.c  session.c  utf8.c  window.c  xmalloc.c
src/platform/: win32_conpty.c  win32_console.c  win32_pipe.c  win32_proc.c
